general_info/week7-assignment/Kubernetes/network-policies/allow-government-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: government-api-allow
  namespace: application
spec:
  podSelector:
    matchLabels:
      app: government-api
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: loan-validator-portal
    ports:
    - protocol: TCP
      port: 8081
  - from:
    - podSelector:
        matchLabels:
          app: government-api
    ports:
    - protocol: TCP
      port: 8081

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: government-api
    ports:
    - protocol: TCP
      port: 8081
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
